# oc_projet6_bis

./: README.md  bentofile.yaml  bentoml_service.sh  docker_install.sh  pyproject.toml  requirements.txt  save_model.py  schemas.py  service.py  validation_config.json
test/: test.sh  test_remote.sh
