[project]
name = "oc-projet6-bis"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "a2wsgi==1.10.10",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiohttp-asgi-connector==1.1.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asgiref==3.11.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "bentoml==1.4.38",
    "cattrs==23.1.2",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "click==8.1.8",
    "click-option-group==0.5.9",
    "cloudpickle==3.1.2",
    "exceptiongroup==1.3.1",
    "filelock==3.19.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-ws==0.7.2",
    "huggingface-hub==0.36.2",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kantoku==0.18.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-ml-py==13.595.45",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opentelemetry-api==1.41.0",
    "opentelemetry-instrumentation==0.62b0",
    "opentelemetry-instrumentation-aiohttp-client==0.62b0",
    "opentelemetry-instrumentation-asgi==0.62b0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions==0.62b0",
    "opentelemetry-util-http==0.62b0",
    "packaging==26.0",
    "pandas==2.3.3",
    "pathspec==1.0.4",
    "pip-requirements-parser==32.0.1",
    "prometheus-client==0.25.0",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.20",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "safetensors==0.7.0",
    "schema==0.7.8",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "setuptools==82.0.1",
    "simple-di==0.1.5",
    "six==1.17.0",
    "starlette==0.49.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tomli==2.4.1",
    "tomli-w==1.2.0",
    "torch==2.8.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "urllib3==2.6.3",
    "uvicorn==0.39.0",
    "watchfiles==1.1.1",
    "wrapt==2.1.2",
    "wsproto==1.2.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]
